# jsleak

./: .coverage  .gitignore  .jsleak.yml  CHANGELOG.md  CLI_TESTING_GUIDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
src/jsleak/: __init__.py  baseline_manager.py  cli.py  config.py  directory.py  fetcher.py  ignorer.py  pattern_utils.py  patterns.py  reporter.py  sarif.py  scanner.py
src/jsleak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: dummy.js  test_directory.py  test_enterprise.py  test_scanner.py  test_v011.py  test_v030.py  test_v050.py
