[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsleak"
version = "0.5.11"
description = "A professional scanner for detecting secrets and endpoints in JavaScript files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Zain Nadeem", email = "zainnadeemzainnadeem80@gmail.com" }
]
keywords = ["security", "scanner", "javascript", "secrets", "ci-cd", "sarif", "api-key", "endpoint", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
jsleak = "jsleak.cli:main"

[project.urls]
Homepage = "https://github.com/zainnadeem786/jsleak"
Documentation = "https://github.com/zainnadeem786/jsleak#readme"
Repository = "https://github.com/zainnadeem786/jsleak"
"Bug Tracker" = "https://github.com/zainnadeem786/jsleak/issues"
Changelog = "https://github.com/zainnadeem786/jsleak/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jsleak*"]
exclude = ["tests*"]
